--- a/friends.html
+++ b/friends.html
@@ -17,7 +17,7 @@
 	 the most sincere and caring group of kids, at FHS anyway. I would make friends with 
 	 practically anyone but I feel like I will keep through collage and wherever life takes me.</p>
 	 
-	 <img src="images/friends1.jpg" width="350" height="225" alt="Image of friends" title="Picture of friends" />
+	 <img src="images/friends1.JPG" width="350" height="225" alt="Image of friends" title="Picture of friends" />
 	 
 	 <p> The common meeting place for me and my friends is at sonic drive-in. Drinks and a side of
 	tots is the usual order among us.</p>
